# mendele

./: .env.example  .gitignore  AGENTS.md  CLEANUP_PLAN.md  DESIGN_CHANGES.md  DISCOVERY_FIX_REPORT.md  DISCOVERY_ISSUES_ANALYSIS.md  DISCOVERY_IS_WORKING.md  DISCOVERY_SYSTEM_ENHANCEMENTS.md  DISCOVERY_SYSTEM_STATUS.md  FIXES_APPLIED.md  FIXES_APPLIED_2026-02-11.md  FIX_GUIDE.md  LOGO_REQUIREMENTS.md  PROGRAM_OVERVIEW.md  QUICK_START_SSE.md  README.md  SEARCH_IMPLEMENTATION.md  SESSION_SUMMARY.md  SSE_STREAMING_FIX_SUMMARY.md  SUPABASE_MIGRATION_SPEC.md  TECHNICAL_DOCS.md  UI_REDESIGN_SUMMARY.md  VERTEX_AI_MIGRATION.md  cloudbuild.yaml  docker-compose.yml  fix-errors.sh  get_icons.js  launch-dev-terminal.sh  launch-dev.sh  middleware.ts  next.config.mjs  opencodefaa.json  package-lock.json  package.json  pnpm-lock.yaml  replace_lucide.js  setup.sh  test-db-types.ts  test-db.ts  (+4 more)
ec-scraper/: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_COMPLETE.md  MODEL_USAGE.md  README.md  TEST_RESULTS.md  VERTEX_AI_SETUP.md  pyproject.toml
ec-scraper/data/: extracurriculars_catalog.json  seed_urls.json
ec-scraper/scripts/: batch_discovery.py  bootstrap_curated.py  db_cleanup.py  deduplicate_opportunities.py  filter_hs_only.py  import_catalog.py  personalized_discovery.py  personalized_discovery_debug.py  quick_discovery.py  remove_outdated.py  review_categories.py  run_scraper.py  scheduled_discovery.py  scheduled_discovery_debug.py  seed_sources.py  validate_urls.py  validate_vertex_setup.py
ec-scraper/src/: __init__.py
ec-scraper/tests/: test_blocklists.py  (+7 more)
(+386 files in other folders)
